# PromptForge

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .mcp.json  .sdk_integrated  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  VISION.md  agent_scratchpad.json  app_spec.txt  claude-progress.txt  docker-compose.yml  docker-entrypoint.sh  feature_list.json  feature_list_1.json  feature_list_2.json  init.sh  version.json
backend/: .dockerignore  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 42eace9b572e_initial_schema_all_9_tables.py  60b437ebe4ef_unify_prompt_cluster.py  75aa153c2ca9_add_q_health_to_taxonomy_snapshots.py  8ecce36187b5_add_index_phase_tracking.py  938041e0f3dd_add_improvement_score_to_optimizations.py  a1b2c3d4e5f6_add_domain_nodes.py  b549943bc7bd_add_tree_etag_to_repo_index_meta.py  e2dbcbacab3a_fix_schema_drift_not_null_on_global_.py  e7f8a9b0c1d2_fix_domain_label_unique_for_multi_project.py  fa5b21b07fd5_add_composite_index_on_optimization_.py
backend/app/: __init__.py  _version.py  config.py  constants.py  converters.py  database.py  main.py  mcp_server.py  models.py
backend/app/dependencies/: auth.py  rate_limit.py
backend/app/middleware/: __init__.py  audit.py  auth.py  csrf.py  mcp_auth.py  rate_limit.py  sanitize.py  security_headers.py
backend/app/models/: __init__.py  audit_log.py  auth.py  branch.py  optimization.py  project.py  repo_index.py  workspace.py
backend/app/prompts/: analyzer_prompt.py  explore_prompt.py  explore_synthesis_prompt.py  optimizer_prompts.py  strategy_prompt.py  validator_prompt.py
backend/app/providers/: __init__.py  anthropic_api.py  base.py  claude_cli.py  demo.py  detector.py  errors.py  gemini_provider.py  models.py  openai_provider.py  registry.py  types.py
backend/app/repositories/: optimization.py  (+2 more)
backend/apps/: __init__.py
backend/kernel/: __init__.py  core.py  database.py
backend/tests/: conftest.py  test_adaptation_tracker.py  test_agent_loader.py  test_analyzer_service.py  test_app_settings.py  test_app_storage.py  test_archive_guards.py  test_audit_logging_coverage.py  test_auth.py  test_auth_hardening.py  test_auth_middleware.py  test_auth_security.py  test_auth_wiring.py  test_batch_pipeline.py  test_cache_service.py  test_cleanup.py  test_clusters_activity.py  test_clusters_router.py  test_codebase_context.py  test_codebase_explorer.py  test_compare_service.py  test_context.py  test_context_builders.py  test_context_enrichment.py  test_context_migration.py  test_context_resolver.py  test_contracts.py  test_converters.py  test_cors.py  test_cross_cluster_injection.py  test_crypto.py  test_csrf.py  test_database.py  test_detector.py  test_domain_resolver.py  test_domain_signal_loader.py  test_domains_router.py  test_embedding_index.py  test_embedding_service.py  test_error_propagation.py  (+125 more)
(+880 files in other folders)
