[project]
name = "promptforge-backend"
version = "0.1.0"
description = "PromptForge - AI Prompt Optimization Pipeline Backend"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.0.0",
    "mcp>=1.0.0",
    "claude-code-sdk>=0.0.25",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
