[project]
name = "promptforge-backend"
version = "0.2.0"
description = "PromptForge - AI Prompt Optimization Pipeline Backend"
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.0.0",
    "mcp>=1.0.0",
    "claude-agent-sdk>=0.1.37",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0", "tiktoken>=0.7.0"]
gemini = ["google-genai>=1.0.0"]
all-providers = ["anthropic>=0.40.0", "openai>=1.50.0", "tiktoken>=0.7.0", "google-genai>=1.0.0"]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
